Фикс всех оставшихся тестов